cabal-version:       2.4
name:                net-mqtt-typed
version:             0.5.1.1
license:             BSD-3-Clause
license-file:        LICENSE
author:              Plow Technologies LLC
maintainer:          alberto.valverde@plowtech.net
copyright:           2020 Plow Technologies LLC
extra-source-files:  CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Werror
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
  if impl(ghc >= 9)
    ghc-options: -Wunused-packages

library
  import: warnings
  exposed-modules:
    Network.MQTT.Typed.API
    Network.MQTT.Typed.Serialization
  build-depends:
      base >=4.13.0.0
    , text
    , bytestring
    , http-api-data
    , aeson
    , cereal
    , time
    , uuid

  if impl(ghc >= 9)
    build-depends: singletons-th
  else
    build-depends: singletons < 2.7
  hs-source-dirs:      src
  default-language:    Haskell2010
